--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Der base-Tag sorgt dafür, dass die App bei Subdirectory-Deployments korrekt funktioniert -->
+    <base href="/" />
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
