--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
     <!-- Der base-Tag sorgt dafür, dass die App bei Subdirectory-Deployments korrekt funktioniert -->
     <base href="/" />
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
